--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-header></app-header>
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>Im working</h2>
+      <h2>I'm Working!</h2>
     </div>
   </div>
 </div>
